2002-12-28  Ion Badulescu  <ionut@moisil.badula.org>

	* libamu/misc_rpc.c (make_rpc_packet): fix make_rpc_packet() on
	64-bit big-endian platforms, bug report from Bill Fenner
	<fenner@research.att.com>

	* configure.in: increase library patchlevel

	* libamu/xutil.c (amu_release_controlling_tty): close and reopen
	file descriptors 0,1,2 before calling setsid()

2002-12-27  Erez Zadok  <ezk@cs.sunysb.edu>

	* updated copyright year to 2003 on all files

2002-12-10  Erez Zadok  <ezk@localhost.localdomain>

	* rename "aux/" subdir into "m4/" so as to avoid problems with
	MS-DOS systems (where "AUX" is a reserved name).  This required
	fixing numerous files.

2002-12-10  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* configure.in: don't check for bad hasmntopt() function if
	hasmntopt() doesn't exist on the system, because we will replace
	it with our own version anyway.

	* conf/transp/transp_sockets.c (amu_get_myaddress): use "%lx" in
	dlog because htonl() returns a u_long.

2002-12-10  Erez Zadok  <ezk@localhost.localdomain>

	* include/am_defs.h: use system's hasmntopt() only if it is found
	and it is not buggy.

	* libamu/hasmntopt.c (nextmntopt): isspace() takes an int, not a
	char.

	* amd/am_ops.c, amd/amfs_auto.c, amd/autil.c, amd/nfs_subr.c,
	amd/ops_cdfs.c, amd/ops_nfs.c, amd/srvr_nfs.c, libamu/hasmntopt.c,
	libamu/mount_fs.c, libamu/mtab.c: rename all uses of hasmntopt()
	to amu_hasmntopt().  Don't use hasmntopt() directly any more!

	* aux/macros/func_bad_hasmntopt.m4: new M4 macro to test for a bad
	hasmntopt() function, which incorrectly finds the option "soft" in
	a string "hard,softlookup,ro".

	* libamu/hasmntopt.c (hasmntopt): use 'const' on two args to
	hasmntopt(), to match what most systems use.

	* aux/macros/header_templates.m4: template for HAVE_BAD_HASMNTOPT.

	* configure.in: invoke test for bad hasmntopt()

	* NEWS: minor new port, i386-pc-linux-rh8.0.
	Mention autofs-v4 on solaris9 works.
